--- a/contact.html
+++ b/contact.html
@@ -11,34 +11,36 @@
 </head>
 <body>
     <script src="https://kit.fontawesome.com/9c5fe3b840.js" crossorigin="anonymous"></script>
-    <header>
-        <nav>
-            <ul >
-                <li id="left">Rex's Portfolio</li>
-                <li id="right"><a href="/index.html#second"><i class="fa-regular fa-circle-xmark fa-fade fa-xl"></a></i></li>
-            </ul>
-        </nav>
-        <hr>
-        <img src="/Img/boy.png" alt="">
-    </header>
-    <section>
-        <h3>Thanks for taking the time to reach out. How can I help you today?</h3>
-        <form action="">
-            <div class="inputbox">
-                <i class="fa-regular fa-user"></i>
-                <input type="text" name="" id="name" required>
-                <label for="Name">Name:</label>
-            </div>
-            <div class="inputbox">
-                <i class="fa-regular fa-envelope"></i>
-                <input type="email" name="" id="email" required>
-                <label for="Email">Email:</label>
-            </div>
-
-            <div class="mytextarea">
-                <label for="message">Message:</label>
-                <textarea name="text" id="text" cols="30" rows="5"></textarea>
-            </div>
+    <div id="header">
+        <header>
+            <nav>
+                <ul >
+                    <li id="left">Rex's Portfolio</li>
+                    <li id="right"><a href="/index.html#second"><i class="fa-regular fa-circle-xmark fa-fade fa-xl"></a></i></li>
+                </ul>
+            </nav>
+            <img src="/Img/boy.png" alt="">
+        </header>
+    </div>
+    <div id="section">
+        <section>
+            <h3>Thanks for taking the time to reach out. How can I help you today?</h3>
+            <form action="">
+                <div class="inputbox">
+                    <i class="fa-regular fa-user"></i>
+                    <input type="text" name="" id="name" required>
+                    <label for="Name">Name:</label>
+                </div>
+                <div class="inputbox">
+                    <i class="fa-regular fa-envelope"></i>
+                    <input type="email" name="" id="email" required>
+                    <label for="Email">Email:</label>
+                </div>
+                
+                <div class="mytextarea">
+                    <label for="message">Message:</label>
+                    <textarea name="text" id="text" cols="30" rows="5"></textarea>
+                </div>
 
             <div class="forget">
                 <label for="">
@@ -48,5 +50,6 @@
             <button>Submit</button>
         </form>
     </section>
+</div>
 </body>
 </html>
