--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="rightsection reveal2">
-                    <img src="Img/bg.png">
+                    <img src="Img/bg.png" >
                 </div>
             </section>
             <hr>
@@ -98,7 +98,7 @@
                             class="fa-brands fa-x-twitter"></i></li>
                     <li><a href="">Email</a><i class="fa-regular fa-envelope"></i></li>
                 </ul>
-                <p>Built from scratch <img src="Img/heart.png" loading="lazy" alt="Lazy-loaded Image"> &#169
+                <p>Built from scratch <img src="Img/heart.png" alt="..." loading="lazy"> &#169
                     Copyright
                     2023 @Rex All rights Reserved</p>
             </div>
