--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" crossorigin="anonymous"> -->
 </head>
+
 <body>
     <script src="https://kit.fontawesome.com/9c5fe3b840.js" crossorigin="anonymous"></script>
     <div id="header">
         <header>
             <nav>
-                <ul >
+                <ul>
                     <li id="left">Rex's Portfolio</li>
-                    <li id="right"><a href="/index.html#second"><i class="fa-regular fa-circle-xmark fa-fade fa-xl"></a></i></li>
+                    <li id="right"><a href="/index.html"><i
+                                class="fa-regular fa-circle-xmark fa-fade fa-xl"></i></a></li>
                 </ul>
             </nav>
             <img src="/Img/boy.png" alt="">
@@ -36,20 +39,21 @@
                     <input type="email" name="" id="email" required>
                     <label for="Email">Email:</label>
                 </div>
-                
+
                 <div class="mytextarea">
                     <label for="message">Message:</label>
                     <textarea name="text" id="text" cols="30" rows="5"></textarea>
                 </div>
 
-            <div class="forget">
-                <label for="">
-                    <input type="checkbox">Subscribe me
-                </label>
-            </div>
-            <button>Submit</button>
-        </form>
-    </section>
-</div>
+                <div class="forget">
+                    <label for="">
+                        <input type="checkbox">Subscribe me
+                    </label>
+                </div>
+                <button>Submit</button>
+            </form>
+        </section>
+    </div>
 </body>
+
 </html>
