--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev Portfolio</title>
+    <title>Tushar - Potfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -20,14 +20,34 @@
 
     <div class="sec" id="second">
         <nav id="navbar">
-            <div class="left" onclick="fun()">Rex's Portfolio</div>
+            <div class="left" onclick="fun()">Tushar's Portfolio</div>
             <div class="right">
                 <ul>
                     <li>
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/">About</a>
+                        <!-- <a href="/">About</a> -->
+                        <a href="/" class="text-light" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">About</a>
+                        <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" tabindex="-1"
+                            id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+                            <div class="offcanvas-header">
+                                <h3 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">About Me
+                                </h3>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-subheading">
+                                <h5>Get to know me!</h5>
+                            </div>
+                            <div class="offcanvas-body">
+                                <p>Hello and welcome to my portfolio! I'm <strong class="highlightabouttext">Tushar Vaid</strong>, a passionate and driven student on a journey to learn and create.</p>
+                                <p> I'm currently pursuing my Bachelor of Engineering in <strong class="highlightabouttext">Electronics and Communication Engineering</strong> at Thapar Institute of Engineering & Technology. This website is a reflection of my dedication to learning, my love for <strong class="highlightabouttext"> web development </strong>, and my eagerness to share my projects and experiences with the world.</p>
+                                <p>I'm open to <strong class="highlightabouttext">Job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. Feel free to Connect or Follow me on my <span id="linkedinlink">Linkedin</span>.</p>
+                                <a id="offcanvasbtn" href="/contact.html" type="button">Contact</a>
+                            </div>
+                        </div>
                     </li>
                     <li id="project"><a href="#projectdetail">Projects</a>
                         <div id="dropdowncontent">
@@ -69,7 +89,7 @@
         <main id="main">
             <section class="firstsection">
                 <div class="leftsection reveal">
-                    <p><i class="fa-solid fa-hand-peace"></i>Hi There! I'm <span id="purple">Rex</span></p>
+                    <p><i class="fa-solid fa-hand-peace"></i>Hi There! I'm <span id="purple">Tushar</span></p>
                     <span id="element2"></span>
                     <span class="reveal" id="element3"></span>
                     <div class="buttons reveal">
@@ -155,6 +175,17 @@
                         <i class="fa-solid fa-hand-point-right fa-2xl carousel-control" aria-hidden="true"
                             style="color: #c410d1;"></i>
                     </button>
+                </div>
+                <div id="toolsdetail">
+                    <h2><span>Toolchain</span></h2>
+                </div>
+                <div class="box">
+                    <div class="items" id="items1">React</div>
+                    <div class="items" id="items2">Node</div>
+                    <div class="items" id="items3">MongoDB</div>
+                    <div class="items" id="items4">Javascript</div>
+                    <div class="items" id="items5">ServiceNow</div>
+                    <div class="items" id="items6">Notebook</div>
                 </div>
             </section>
         </main>
