--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="(max-width:1475px)" href="css/responsive.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" media="(max-width:1422px)" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <!-- Responsive CSS -->
 </head>
 
 <body>
@@ -27,9 +27,9 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <!-- <a href="/">About</a> -->
                         <a href="/" class="text-light" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">About</a>
+                            data-bs-target="#offcanvasWithBothOptions"
+                            aria-controls="offcanvasWithBothOptions">About</a>
                         <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" tabindex="-1"
                             id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                             <div class="offcanvas-header">
@@ -42,9 +42,19 @@
                                 <h5>Get to know me!</h5>
                             </div>
                             <div class="offcanvas-body">
-                                <p>Hello and welcome to my portfolio! I'm <strong class="highlightabouttext">Tushar Vaid</strong>, a passionate and driven student on a journey to learn and create.</p>
-                                <p> I'm currently pursuing my Bachelor of Engineering in <strong class="highlightabouttext">Electronics and Communication Engineering</strong> at Thapar Institute of Engineering & Technology. This website is a reflection of my dedication to learning, my love for <strong class="highlightabouttext"> web development </strong>, and my eagerness to share my projects and experiences with the world.</p>
-                                <p>I'm open to <strong class="highlightabouttext">Job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. Feel free to Connect or Follow me on my <span id="linkedinlink">Linkedin</span>.</p>
+                                <p>Hello and welcome to my portfolio! I'm <strong class="highlightabouttext">Tushar
+                                        Vaid</strong>, a passionate and driven student on a journey to learn and create.
+                                </p>
+                                <p> I'm currently pursuing my Bachelor of Engineering in <strong
+                                        class="highlightabouttext">Electronics and Communication Engineering</strong> at
+                                    Thapar Institute of Engineering & Technology. This website is a reflection of my
+                                    dedication to learning, my love for <strong class="highlightabouttext"> web
+                                        development </strong>, and my eagerness to share my projects and experiences
+                                    with the world.</p>
+                                <p>I'm open to <strong class="highlightabouttext">Job</strong> opportunities where I can
+                                    contribute, learn and grow. If you have a good opportunity that matches my skills
+                                    and experience then don't hesitate to contact me. Feel free to Connect or Follow me
+                                    on my <span id="linkedinlink">Linkedin</span>.</p>
                                 <a id="offcanvasbtn" href="/contact.html" type="button">Contact</a>
                             </div>
                         </div>
@@ -141,7 +151,8 @@
                                 <img src="/img/PGLife.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">PG Life <span
-                                            class="badge rounded-pill text-bg-dark">php</span></h5>
+                                            class="badge rounded-pill text-bg-dark">php</span>
+                                    </h5>
                                     <p class="card-text">A LAMP stack website where one can find the perfect
                                         accommodation.</p>
                                     <a href="http://146.190.9.56/" class="btn">Visit <i
